--- a/src/main/resources/templates/stats.jade
+++ b/src/main/resources/templates/stats.jade
@@ -3,7 +3,9 @@ extends layout.jade
 block scripts
     script(src='https://d3js.org/d3.v4.min.js')
     script(src='/js/test.js')
+    script(src='/js/out.js')
 
 block content
     p Swarm statistics
     p= stats
+    div.chart
